New:
- Added partial Oracle drag and drop support. (Patch: Yavor Shahpasov)
- Generates metadata about properties to be used in queries (as in ICriterion selectCriterium = Expression.Eq(User.Properties.Name, name); )(Thanks: Rudi van den Belt)

Fixed:
- ManyToOne SourceNotNull is now working propertly
- Incorrectly generates Some pascal case fields as camel case.

Preview 3.1

New:
- CONTRIB-31: "Lazy" One-to-One relation. (Thanks: Gabriel Schenker)

Fixed:
- Server Explorer drag'n drop is now supported on international versions of VS. (Patch: Daniel Rothmaler)
- Server Explorer support changed to VS Connection Service and its Connection Hierarchies, instead of the Server Explorer's UIHierarchies to
  prevent the flicker during the hierarchy traversing process.  (Patch: Daniel Rothmaler)
- Closing Contrib-25. ValidateNotSameAttribute Won't be supported ATM.
- CONTRIB-33: When adding a table (SQL Server) to the designer which has a primary key of type uniqueidentifier ActiveWriter should use "Guid" instead of "Native" as generator (Thanks: Gabriel Schenker)
- Assembly names in NHibernate configs are incorrectly stripped from the name. (Thanx: Fedde)
- Removed dependency to MySQL.Data.dll to prevent runtime version conflicts. Moved to IDbConnection for all metadata retrieval jobs. (Thanks: Joao Paulo Marques and Shane)

Preview 3

New:
- Now optionally generates NHibernate hbm.xml files.
- Namespace in generated code is now customizable (Idea: Robert van Hoornaar)
- Imports in generated code is now customizable (Idea: Robert van Hoornaar)
- Model classes can override model level base class definition. (Patch: Robert van Hoornaar)
- Model classes can override model level generics generation. (Idea: Robert van Hoornaar)
- Contrib-26: Add support for AR Nested / NH Component mappings. Allow the ability to specify a column prefix for active record. (thx: Adam Tybor)
- Optionally generates classes implementing INotifyPropertyChanged.