@@ -2,10 +2,10 @@
 <activeRecordMapping dslVersion="1.0.0.0" absoluteBounds="0, 0, 11, 8.5" isCompleteView="false" name="GeneratedCodeSubClassMetaDataGenerationTestModel">
   <modelMoniker Id="904a41bf-4a82-4627-866b-bf9f1532269d" />
   <nestedChildShapes>
-    <classShape Id="6ce7979a-6e8e-4b0c-81e7-896e425fa953" absoluteBounds="0.5, 1.375, 1.5, 1.7208968098958333">
+    <classShape Id="6ce7979a-6e8e-4b0c-81e7-896e425fa953" absoluteBounds="0.5, 0.5, 1.5, 1.7208968098958333">
       <modelClassMoniker name="/904a41bf-4a82-4627-866b-bf9f1532269d/SubClassMetaDataType" />
       <nestedChildShapes>
-        <elementListCompartment Id="162d64fe-da80-45e2-8c90-37b72372ed34" absoluteBounds="0.515, 1.7850000000000001, 1.4700000000000002, 1.210896809895833" name="Properties" title="Properties" titleFillColor="LightGray" compartmentFillColor="White" />
+        <elementListCompartment Id="162d64fe-da80-45e2-8c90-37b72372ed34" absoluteBounds="0.515, 0.91000000000000014, 1.4700000000000002, 1.210896809895833" name="Properties" title="Properties" titleFillColor="LightGray" compartmentFillColor="White" />
       </nestedChildShapes>
     </classShape>
   </nestedChildShapes>
